name:              blog
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Hristo Stoyanov
maintainer:        Hristo Stoyanov
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://blog.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Admin
                     Handler.AdminUsers
                     Handler.Blog
                     Handler.Home
                     Handler.Plugin
                     Handler.WebInterface
                     Handler.Crash
                     Handler.Opinion
                     Helpers.Messages
                     Helpers.Posts
                     Helpers.Plugin

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.1        && < 1.2
                 , yesod-core                    >= 1.1        && < 1.2
                 , yesod-auth                    >= 1.1        && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1        && < 1.2
                 , yesod-form                    >= 1.2        && < 1.3
                 , yesod-test                    >= 0.3        && < 0.4
                 , clientsession                 >= 0.9        && < 0.10
                 , bytestring                    >= 0.10       && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.1        && < 1.2
                 , persistent-sqlite             >= 1.1        && < 1.2
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.1        && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.9        && < 1.10
                 , directory                     >= 1.2        && < 1.3
                 , warp                          >= 1.3        && < 1.4
                 , fast-logger
                 , monad-logger
                 , aeson
                 , conduit
                 , data-default
                 , yesod-markdown
                 , old-locale
                 , time
                 , blaze-markup
                 , blaze-html
                 , mime-mail
                 , cryptohash
                 , SHA

executable         blog
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , blog
                     , yesod-core
                     , yesod-default

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends: base
                 , blog
                 , yesod-test
                 , yesod-default
                 , yesod-core
